--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,6 @@ p {
   padding-top: 2rem;
   padding-left: 2rem;
   padding-right: 2rem;
-  margin: auto;
   font-weight: 700;
 }
 
@@ -60,7 +59,7 @@ p {
   margin-left: 1rem;
   margin-right: 1rem;
   padding: 1.5rem;
-  border-radius: 1rem;
+  border-radius: 0.75rem;
 }
 
 .comment .people {
@@ -93,16 +92,20 @@ p {
 
 @media only screen and (min-width: 1440px) {
   body {
-    padding: 3rem;
+    margin: 0 5rem;
   }
   .jumbotron {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 1rem;
   }
 
   .jumbotron .jumbo_tag {
     max-width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
   }
 
   .jumbotron .rate {
@@ -116,9 +119,13 @@ p {
   .jumbotron .head,
   .jumbotron .tagline {
     text-align: left;
+    margin: 0;
+    padding: 0;
+    margin-right: 4rem;
   }
 
-  .jumbotron .jumbo_tag {
+  .jumbo_tag .tagline {
+    line-height: 2rem;
   }
 
   .rate {
@@ -147,5 +154,30 @@ p {
   .rating .review {
     margin-top: 0;
     margin-left: 2rem;
+  }
+
+  .comments {
+    display: flex;
+    margin: 0;
+    height: 50%;
+  }
+
+  .comments .comment {
+    margin: 0;
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
+  .comments .comment:nth-child(1) {
+    align-self: flex-start;
+  }
+  .comments .comment:nth-child(2) {
+    align-self: center;
+    margin-top: 1rem;
+  }
+
+  .comments .comment:nth-child(3) {
+    align-self: flex-end;
+    margin-top: 3rem;
   }
 }
